# ne-pp

./: CMakeLists.txt  README.md
corpus/csv/: comma_delimiter.csv
include/core/: exceptions.hpp
include/csv_utils/: csv_parser.hpp
include/file_io/: file_reader.hpp
include/ne_pp/pp/core/: exceptions.hpp
include/ne_pp/pp/file_io/: file_reader.hpp
include/ne_pp/pp/structures/: column_struct.hpp  file_struct.hpp
include/ne_pp/pp/utils/csv_utils/: csv_columnar_projection.hpp  csv_parser.hpp
include/ne_pp/pp/utils/token_utils/: infer_type.hpp  string_pp.hpp
include/structures/: column_struct.hpp  file_struct.hpp
src/: main.cpp
src/csv_utils/: csv_parser.cpp
src/file_io/: file_reader.cpp
src/ne_pp/pp/file_io/: file_reader.cpp
src/ne_pp/pp/utils/csv_utils/: csv_parser.cpp
src/ne_pp/pp/utils/token_utils/: infer_type.cpp  string_pp.cpp
src/structures/: column_struct.cpp
